--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
+*{
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  background: transparent;
+}
+
+html{
+  font-size: 62.5%;
+}
+
+body {
+  font:300 11px/1.4 'Helvetica Neue', 'sans-serif';
+  color: #fff;
+  background: rgb(30, 30, 30);
+  overflow: hidden;
+  overflow-y: scroll;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
+
