--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,9 @@
   background: transparent;
 }
 
-html{
+/* html{
   font-size: 62.5%;
-}
+} */
 
 body {
   font:300 11px/1.4 'Helvetica Neue', 'sans-serif';
