--- a/src/components/Navbar/index.css
+++ b/src/components/Navbar/index.css
@@ -5,7 +5,7 @@
     margin: 0 auto;
     padding: 1rem 2rem;
     display: flex;
-    /* align-items: center; */
+    align-items: center;
     justify-content: space-between;
     position: sticky;
     top: 0;
@@ -14,12 +14,13 @@
 
 .logo{
     object-fit: cover;
+    height: 4rem;
 }
 
 .menulist{
     margin: 1rem;
     cursor: pointer;
-    font-size: 1rem;
+    font-size: 1.5rem;
 }
 
 .menulist:hover{
